~ Fixed issues with block width on small screens

--- a/src/app/main-page/achievements-block/achievements-block.component.scss
+++ b/src/app/main-page/achievements-block/achievements-block.component.scss
@@ -28,3 +28,12 @@
     }
   }
 }
+
+.achievements.small,
+.achievements.x_small {
+  width: 100%;
+
+  .achievement {
+    width: 100%;
+  }
+}
