--- a/src/app/main-page/cv-block-appearence/cv-block-appearence.component.scss
+++ b/src/app/main-page/cv-block-appearence/cv-block-appearence.component.scss
@@ -13,4 +13,5 @@ div.section-title {
 main {
   display: flex;
   flex: 1;
+  width: 100%;
 }
