--- a/src/app/main-page/employment-block/employment-block.component.scss
+++ b/src/app/main-page/employment-block/employment-block.component.scss
@@ -1,5 +1,6 @@
 div.employment {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 8px;
 }
