--- a/src/app/main-page/skills-block/skills-block.component.scss
+++ b/src/app/main-page/skills-block/skills-block.component.scss
@@ -1,5 +1,6 @@
 div.skills {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 8px;
 }
